# flask-password

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  app_test.py  build_ecr.sh  corpus.txt  counts.json  crypto.py  database.py  forms.py  license.txt  markov.py  migrate.py  models.py  pyproject.toml  requirements.txt
static/: manifest.json
static/css/: app.css
static/js/: app.js
templates/: about.html  add_form.html  add_record.html  change_password.html  delete_account.html  delete_record.html  edit_record.html  form_errors.html  generate_passwords.html  import_records.html  import_user.html  index.html  layout.html  login.html  new-user.html  record.html  records.html  search_form.html  searches.html  setup.html  user_info.html
