[tool.poetry]
name = "flask-password"
version = "0.6.1"
description = ""
authors = ["Daniel Jones <tortxof@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
pycryptodome = "^3.9"
flask-s3 = "^0.3.3"
peewee = "^3.11"
psycopg2-binary = "^2.8"
zappa = "^0.48.2"
flask-assets = "^0.12.0"
flask-wtf = "^0.14.2"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
selenium = "^3.141"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
