[project]
name = "flask-password"
version = "0.7.0"
description = ""
requires-python = ">=3.13"

dependencies = [
    "flask>=3.1",
    "pycryptodome>=3.21",
    "peewee>=3.17",
    "psycopg2-binary>=2.9",
    "flask-wtf>=1.2",
    "whitenoise>=6.9.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
